# LibCST

./: .editorconfig  .fixit.config.yaml  .flake8  .gitignore  .pyre_configuration  .pyre_configuration.example  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  README.rst  apt.txt  check_copyright.sh  codecov.yml  pleaseUpdate.ts  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  tox.ini  zizmor.yml
.circleci/: .pyre_configuration  config.yml
.github/: PULL_REQUEST_TEMPLATE.md  build-matrix.json  dependabot.yml
.github/workflows/: .pyre_configuration  .pyre_configuration.template  build.yml  ci.yml  crates_upload.yml  pypi_upload.yml  toolcache.yml  zizmor.yml
docs/source/: best_practices.rst  codemods.rst  codemods_tutorial.rst  conf.py  experimental.rst  helpers.rst  index.rst  matchers.rst  matchers_tutorial.ipynb  metadata.rst  metadata_tutorial.ipynb  motivation.rst  nodes.rst  parser.rst  scope_tutorial.ipynb  tutorial.ipynb  usage.ipynb  visitors.rst  why_libcst.rst
libcst/: __init__.py  _add_slots.py  _base_visitor.py  _batched_visitor.py  _excep.py  _exceptions.py  _flatten_sentinel.py  _helpers.py  _maybe_sentinel.py  _metadata_dependent.py  _position.py  _removal_sentinel.py  _tabs.py  _type_enforce.py  _typed_visitor.py  _typed_visitor_base.py  _types.py  _version.py  _visitors.py  batched_visitor.py  exceptions.py  helpers.py  matchers.py  test_scope.py  tool.py  typed_visitor_base.py  visitors.py
libcst/_nodes/: __init__.py  _base.py  _deep_equals.py  _dummy.py  _expression.py  _internal.py  _module.py  _op.py  _statement.py  _whitespace.py  base.py  deep_equals.py  expression.py  internal.py  module.py  op.py  statement.py  test_for.py  test_while.py  test_with.py  whitespace.py
libcst/_parser/: __init__.py  _base_parser.py  _detect_config.py  _entrypoints.py  _grammar.py  _production_decorator.py  _python_parser.py  _whitespace_parser.py  _wrapped_tokenize.py  base_parser.py  custom_itertools.py  detect_config.py  entrypoints.py  grammar.py  production_decorator.py  py_whitespace_parser.py  python_parser.py  utils.py  whitespace_parser.py  wrapped_tokenize.py
libcst/codegen/: gather.py  gen_matcher_classes.py  gen_type_mapping.py  gen_visitor_functions.py  generate.py  transforms.py
libcst/codemod/: __init__.py  _cli.py  _codemod.py  _command.py  _context.py  _dummy_pool.py  _runner.py  _testing.py  _visitor.py
libcst/display/: __init__.py  graphviz.py  text.py
libcst/helpers/: __init__.py  _statement.py  _template.py  common.py  expression.py  matchers.py  module.py  node_fields.py  paths.py
libcst/matchers/: __init__.py  _decorators.py  _matcher_base.py  _return_types.py  _visitors.py
libcst/metadata/: __init__.py  _interface.py  _resolver.py  accessor_provider.py  base_provider.py  dependent.py  expression_context_provider.py  file_path_provider.py  full_repo_manager.py  mypy_type_inference_provider.py  mypy_utils.py  name_provider.py  parent_node_provider.py  position_provider.py  reentrant_codegen.py  runner.py  scope_provider.py  span_provider.py  type_inference_provider.py  wrapper.py
libcst/nodes/: __init__.py  _base.py  _deep_equals.py  _dummy.py  _expression.py  _internal.py  _module.py  _op.py  _statement.py  _whitespace.py
libcst/parser/: __init__.py  _base_parser.py  _custom_itertools.py  _detect_config.py  _entrypoints.py  _grammar.py  _production_decorator.py  _python_parser.py  _whitespace_parser.py  _wrapped_tokenize.py
libcst/testing/: utils.py
libcst/tests/: __main__.py  test_add_slots.py  test_batched_visitor.py  test_deep_clone.py  test_deep_replace.py  test_deprecate_extslice.py  test_e2e.py  (+11 more)
libcst_native/: Cargo.toml
libcst_native/benches/: parser_benchmark.rs
libcst_native/src/: bin.rs  lib.rs  token_type.rs  whitespace_parser.rs  whitespace_state.rs
libcst_native/src/parser/: codegen.rs  expression.rs  grammar.rs  mod.rs  op.rs  statement.rs  whitespace.rs
libcst_native/src/tokenize/: mod.rs  py_mod.rs  tests.rs  wrapped.rs
libcst_native/src/tokenize/core/: README.md  mod.rs  string_types.rs
libcst_native/src/tokenize/text_position/: mod.rs
libcst_native/tests/: parser_roundtrip.rs
libcst_native/tests/fixtures/: comments.py  expr.py  func_defs.py  import.py
native/: Cargo.toml  roundtrip.sh
native/libcst/: Cargo.toml  Grammar  README.md
native/libcst/benches/: parser_benchmark.rs
native/libcst/src/: bin.rs  error.rs  lib.rs  py.rs
native/libcst/src/nodes/: codegen.rs  common.rs  expression.rs  inflate_helpers.rs  macros.rs  mod.rs  module.rs  op.rs  parser_config.rs  py_cached.rs  statement.rs  test_utils.rs  text_position.rs  traits.rs  whitespace.rs
native/libcst/src/parser/: errors.rs  grammar.rs  inflate.rs  mod.rs  numbers.rs
native/libcst/src/tokenizer/: debug_utils.rs  mod.rs  operators.rs  tests.rs  whitespace_parser.rs
native/libcst/src/tokenizer/core/: mod.rs  string_types.rs
native/libcst/src/tokenizer/text_position/: char_width.rs  mod.rs
native/libcst/tests/: .gitattributes  parser_roundtrip.rs
native/libcst/tests/fixtures/: big_binary_operator.py  class_craziness.py  comments.py  comparisons.py  dangling_indent.py  decorated_function_without_body.py  dysfunctional_del.py  expr.py  expr_statement.py  fun_with_func_defs.py  func_defs.py  global_nonlocal.py  import.py  indents_but_no_eol_before_eof.py  just_a_comment_without_nl.py  malicious_match.py  mixed_newlines.py  pep646.py  raise.py  smol_statements.py  starry_tries.py  suicidal_slices.py  super_strings.py  terrible_tries.py  trailing_comment_without_nl.py  trailing_whitespace.py  tuple_shenanigans.py  type_parameters.py  with_wickedness.py  wonky_walrus.py
native/libcst_derive/: Cargo.toml
native/libcst_derive/src/: codegen.rs  cstnode.rs  inflate.rs  into_py.rs  lib.rs  parenthesized_node.rs
native/libcst_derive/tests/pass/: minimal_cst.rs  simple.rs
native/libcst_parser/: Cargo.toml
native/libcst_parser/src/: grammar.rs  inflate.rs  lib.rs
scripts/: check_copyright.py  regenerate-fixtures.py
stubs/: tokenize.pyi
(+315 files in other folders)
