# Copyright (c) Facebook, Inc. and its affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[package]
name = "libcst_native"
version = "0.1.0"
authors = ["LibCST Developers"]
edition = "2018"

[lib]
name = "libcst_native"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "parse"
path = "src/bin.rs"

[features]
# This is a bit of a hack, since `cargo test` doesn't work with `extension-module`.
# To run tests, use `cargo test --no-default-features`.
#
# Once https://github.com/PyO3/pyo3/pull/1123 lands, it may be better to use
# `-Zextra-link-arg` for this instead.
default = ["pyo3/extension-module"]
trace = ["peg/trace"]

[dependencies]
once_cell = "1.5.2"
paste = "1.0.4"
pyo3 = "0.13.2"
regex = "1.4.3"
thiserror = "1.0.23"
peg = "0.7.0"
chic = "1.2.2"
itertools = "0.10.0"
indoc = "1.0"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "parser_benchmark"
harness = false