# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[package]
name = "libcst"
version = "0.1.0"
authors = ["LibCST Developers"]
edition = "2018"
rust-version = "1.53"

[lib]
name = "libcst_native"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "parse"
path = "src/bin.rs"

[features]
# This is a bit of a hack, since `cargo test` doesn't work with `extension-module`.
# To run tests, use `cargo test --no-default-features`.
#
# Once https://github.com/PyO3/pyo3/pull/1123 lands, it may be better to use
# `-Zextra-link-arg` for this instead.
default = ["py"]
py = ["pyo3","pyo3/extension-module"]
trace = ["peg/trace"]

[dependencies]
paste = "1.0.9"
pyo3 = { version = "0.18", optional = true }
thiserror = "1.0.37"
peg = "0.8.1"
chic = "1.2.2"
itertools = "0.10.5"
once_cell = "1.16.0"
regex = "1.7.0"
libcst_derive = { path = "../libcst_derive" }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
criterion-cycles-per-byte = "0.1"
difference = "2.0.0"

[[bench]]
name = "parser_benchmark"
harness = false
