[package]
name = "libcst_derive"
version = "1.7.0"
edition = "2018"
description = "Proc macro helpers for libcst."
license = "MIT"
repository = "https://github.com/Instagram/LibCST"
documentation = "https://libcst.rtfd.org"
keywords = ["macros", "python"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
