[package]
name = "libcst_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = ["peg/trace"]

[dependencies]
itertools = "0.10.0"
once_cell = "1.5.2"
peg = "0.7.0"
regex = "1.4.3"
libcst_nodes = { path = "../libcst_nodes" }
libcst_tokenize = { path = "../libcst_tokenize" }
thiserror = "1.0.23"